--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 TEST_URL=https://jsonplaceholder.typicode.com/posts
+BUKALAPAK_URL=https://www.bukalapak.com
+API_BUKALAPAK=https://api.bukalapak.com
