--- a/package.json
+++ b/package.json
@@ -4,19 +4,16 @@
   "description": "POC API Testing Framework with Mocha and Chai",
   "main": "index.js",
   "scripts": {
-    "test-api": "./node_modules/mocha/bin/mocha automation-web-api --recursive --reporter mochawesome --reporter-options reportDir=reports/mochawesome/ --timeout 60000",
+    "test-api": ".//node_modules//mocha//bin//mocha automation-web-api --recursive --reporter mochawesome --reporter-options reportDir=reports/mochawesome/ --timeout 60000",
     "reports": "open 'reports/mochawesome/mochawesome.html'"
   },
-  "author": "Sheila Yovani",
+  "author": "Fadly Mahendra",
   "dependencies": {
     "chai": "^4.1.2",
     "chai-json-schema": "^1.5.1",
     "dotenv": "^7.0.0",
-    "form-data": "^3.0.0",
     "mocha": "^5.2.0",
-    "mochawesome": "^3.0.2"
-  },
-  "devDependencies": {
-    "supertest": "^3.4.2"
+    "mochawesome": "^3.0.2",
+    "supertest": "^3.1.0"
   }
 }
